# matthewkosarek-xyz

./: #index.js#  .gitignore  Makefile  README.md  astro.config.mjs  create-update-post.el  index.css  index.html  index.html~  index.js  index.js~  mini-jquery.js  mini-jquery.js~  package-lock.json  package.json  posts.css  posts.html  posts.html~  publish.el  publish.sh  resume.css  resume.css~  resume.html  resume.html~  resume.js  resume.js~  resume.mobile.css  robots.txt  run_dev.sh  upload.sh  upload.sh~
themes/: #LeafParticleRender.cpp#  .gitignore  LeafParticleRender.cpp  LeafParticleRender.h  MainLoop.h  Makefile  README.md  Renderer2d.cpp  Renderer2d.h  Renderer2d_Frag.glsl  Renderer2d_Vertex.glsl  Renderer3d.cpp  Renderer3d.h  Shader.cpp  Snowflake.cpp  Snowflake.h  SummerTheme.cpp  TreeObject.h~  TreeShape.cpp  TreeShape.h  TreeShape.h~  WebglContext.cpp  WebglContext.h  WebglContext.h~  a.out.wasm  build.sh  build.sh~  compile_commands.json  compile_commands.sh  emscripten.ini  list.h  main.cpp  main.cpp~  mathlib.cpp  mathlib.h  meson.build  types.h
themes/deprecated/: TreeRenderer.cpp  TreeRenderer.h
themes/src/: MainLoop.cpp  Renderer2d.cpp  Renderer2d.h  Renderer3d.cpp  Snowflake.cpp  Snowflake.h  SummerTheme.h  TreeShape.cpp  TreeShape.h  WebglContext.cpp  Windfield.cpp  Windfield.hpp  list.h  main.cpp  main_loop.cpp  main_loop.h  renderer_2d.cpp  renderer_2d.h  renderer_3d.cpp  renderer_3d.h  shader.cpp  shader.h  shader_fetcher.cpp  shader_fetcher.hpp  shapes_2d.cpp  shapes_2d.h  theme.h  webgl_context.cpp
themes/src/_shaders/: grass.frag  grass.vert  renderer2d.frag  renderer3d.frag  snowflake.frag  snowflake.vert  sun.frag  sun.vert
themes/src/autumn/: AutumnTheme.cpp  AutumnTheme.hpp  LeafParticleRender.cpp  LeafParticleRender.h  TreeShape.cpp  TreeShape.h  autumn_theme.cpp  autumn_theme.hpp  leaf_particle_render.cpp  leaf_particle_render.h  tree_shape.cpp  tree_shape.h
themes/src/shaders/: grass_frag.cpp  grass_frag.h  grass_vert.cpp  grass_vert.h  grassrenderer.frag  grassrenderer.vert  renderer2d_frag.cpp  renderer2d_frag.h  renderer2d_vert.cpp  renderer2d_vert.h  renderer3d.frag  renderer3d.vert  renderer3d_frag.cpp  renderer3d_frag.h  renderer3d_vert.cpp  renderer3d_vert.h  sun_frag.h  (+7 more)
themes/tools/: bundle_shaders.py
(+123 files in other folders)
